# CPP_FightingGame_2

./: .gitignore  CMakeLists.txt  GameLog.rblog  README.md  cmd lines.txt  pacman installs.txt  vs sln build commands.txt  vscode keybindings.txt  vscode settings json - windows.txt  vscode settings.txt
AnimationSpecs/: fighter_0_walk.aniSpecs
AttackSpecs/: fighter_0_jab.attackSpecs  fighter_0_strong_punch.attackSpecs
FightingGameProject/: AABB.cpp  AABB.h  AABB_Set.cpp  AABB_Set.h  ActiveControllers.cpp  ActiveControllers.h  ActivePlayerStates.cpp  ActivePlayerStates.h  ActiveStateMachines.cpp  ActiveStateMachines.h  AirMomentum.cpp  AirMomentum.h  AllocationCount.h  Ani.cpp  Ani.h  AnimationContainer.cpp  AnimationContainer.h  AnimationInfo.h  AnimationLoader.cpp  AnimationLoader.h  AnimationObj.cpp  AnimationObj.h  AnimationRenderSettings.h  AnimationRenderer.cpp  AnimationRenderer.h  AnimationRendererLoader.cpp  AnimationRendererLoader.h  AnimationSpecs.h  AttackBoxDataController.cpp  AttackBoxDataController.h  AttackBoxEditorUpdater.cpp  AttackBoxEditorUpdater.h  AttackCollisionYType.h  AttackRegister.h  AttackRegisterController.cpp  AttackRegisterController.h  AttackSpecs.h  AttackSpecsController.cpp  AttackSpecsController.h  AttackStrengthType.h  (+507 more)
FightingGameProject/AnimationSpecs/: f0_AnimationSpecs_crouch.anispecs  f0_AnimationSpecs_crouch_idle.anispecs  f0_AnimationSpecs_hadouken.aniSpecs  f0_AnimationSpecs_idle.anispecs  f0_AnimationSpecs_jab.aniSpecs  f0_AnimationSpecs_jump_forward_1.aniSpecs  f0_AnimationSpecs_jump_up_0.aniSpecs  f0_AnimationSpecs_jump_up_1.aniSpecs  f0_AnimationSpecs_standup.anispecs  f0_AnimationSpecs_strong_kick.aniSpecs  f0_AnimationSpecs_strong_punch.aniSpecs  f0_AnimationSpecs_strong_wince.aniSpecs  f0_AnimationSpecs_walk.aniSpecs  f0_AnimationSpecs_wince.aniSpecs  f0_crouch.anispecs  f0_crouch_idle.anispecs  f0_hadouken.aniSpecs  f0_idle.anispecs  f0_jab.aniSpecs  f0_jump_forward_0.aniSpecs  f0_jump_forward_1.aniSpecs  f0_jump_up_0.aniSpecs  f0_jump_up_1.aniSpecs  f0_standup.anispecs  f0_strong_kick.aniSpecs  f0_strong_punch.aniSpecs  f0_strong_wince.aniSpecs  f0_walk.aniSpecs  f0_wince.aniSpecs  fighter_0_jab.aniSpecs  fighter_0_jump_up.aniSpecs  fighter_0_strong_kick.aniSpecs  fighter_0_strong_punch.aniSpecs  fighter_0_wince.aniSpecs  p0_AnimationSpecs_crouch.anispecs  p0_AnimationSpecs_crouch_idle.anispecs  p0_AnimationSpecs_fall.aniSpecs  p0_AnimationSpecs_hadouken.aniSpecs  p0_AnimationSpecs_idle.anispecs  p0_AnimationSpecs_jab.aniSpecs  (+12 more)
FightingGameProject/AttackBoxSpecs/: fighter_0_jab.HBoxSpecs  fighter_0_strong_kick.HBoxSpecs  fighter_0_strong_punch.HBoxSpecs
FightingGameProject/AttackSpecs/: aku_strong_kick.attackSpecs  aku_strong_punch.attackSpecs  aku_weak_punch.attackSpecs  fighter_0_strong_kick.attackSpecs
FightingGameProject/EditorSettings/: AttackBoxSettings.editorSettings  TargetBoxSettings.editorSettings
FightingGameProject/HitBoxSpecs/: fighter_0_jab.HBoxSpecs  fighter_0_jab.HurtBoxSpecs
FightingGameProject/HurtBoxData/: Sample.HurtBoxData  Sample2.HurtBoxData
FightingGameProject/HurtBoxSpecs/: Sample.HurtBoxSpecs  TestSave.HurtBoxSpecs  fighter_0_idle.HBoxSpecs  fighter_0_idle.HurtBoxSpecs  fighter_0_jab.HurtBoxSpecs  fighter_0_walk.HurtBoxSpecs
FightingGameProject/MoveSpecs/: Aku_moveSpecs.moveSpecs
FightingGameProject/PlayerBoxSpecs/: box_none_test.playerBoxSpecs
FightingGameProject/TargetBoxSpecs/: fighter_0_idle.HBoxSpecs  fighter_0_jab.HBoxSpecs  fighter_0_strong_wince.HBoxSpecs  fighter_0_wince.HBoxSpecs
PNG files/Aku/: fighter_0_jump_forward_0.psd
PNG files/InputIcons/: strong_punch.psd
PlayerBoxSpecs/Aku/: fighter_0_crouch.playerBoxSpecs  fighter_0_crouch_idle.playerBoxSpecs  fighter_0_standup.playerBoxSpecs
VisualStudioProject/: ALL_BUILD.vcxproj  CPPFG2.sln  ZERO_CHECK.vcxproj
resource/AnimationSpecs/: fighter_0_crouch.aniSpecs  fighter_0_crouch_attack_weak.anispecs  fighter_0_crouch_idle.aniSpecs  fighter_0_crouch_punch_weak.aniSpecs  fighter_0_crouch_punch_weak.anispecs  fighter_0_crouch_weak_wince.aniSpecs  fighter_0_fall.aniSpecs  fighter_0_hadouken.aniSpecs  fighter_0_idle.aniSpecs  fighter_0_idle.anispecs  fighter_0_jab.aniSpecs  fighter_0_jump_forward_0.aniSpecs  fighter_0_jump_forward_1.aniSpecs  fighter_0_jump_up.aniSpecs  fighter_0_kneel.aniSpecs  fighter_0_kneel.anispecs  fighter_0_lie_down.aniSpecs  fighter_0_lie_down.anispecs  fighter_0_standup.aniSpecs  fighter_0_strong_kick.aniSpecs  fighter_0_strong_punch.aniSpecs  fighter_0_strong_wince_high.aniSpecs  fighter_0_strong_wince_mid.aniSpecs  fighter_0_walk.aniSpecs  fighter_0_weak_wince_mid.aniSpecs  fighter_0_wince.aniSpecs  vfx_hiteffect_0.aniSpecs  vfx_hiteffect_body.aniSpecs  vfx_hiteffect_head.aniSpecs  vfx_hiteffect_leg.aniSpecs
resource/AttackBoxSpecs/: fighter_0_crouch_punch_weak.HBoxSpecs  fighter_0_jab.HBoxSpecs  fighter_0_strong_kick.HBoxSpecs  fighter_0_strong_punch.HBoxSpecs
resource/AttackSpecs/: fighter_0_crouch_punch_weak.attackSpecs  fighter_0_jab.attackSpecs  fighter_0_strong_kick.attackSpecs  (+1 more)
src/: .Selector.h.swp  AABB.cpp  AllocationCount.cpp  AllocationCount.h  AnimationContainer.cpp  AnimationContainer.h  AnimationSpecs.h  AttackBoxDataController.cpp  AttackBoxEditorUpdater.cpp  AttackRegister.h  AttackRegisterController.h  AttackSpecsController.cpp  AttackSpecsController.h  AttackStrengthType.h  BackgroundController.cpp  BackgroundController.h  BackgroundObj.h  CamController.h  CamObj.cpp  CharacterType.h  ControllerBase.h  ControllerT.h  DetectHit.h  DisplaySize.cpp  DisplaySize.h  DoNotFixDirectionDuringState.h  Ease.h  EaseCalculator.cpp  EaseCalculator.h  F0_Weak_Wince_Mid.cpp  F0_Weak_Wince_Mid.h  F0_Wince.cpp  F0_Wince.h  FixSpecialMoveStatusDuringState.cpp  FixSpecialMoveStatusDuringState.h  FixWincingStatusDuringState.cpp  FixWincingStatusDuringState.h  FixedTimer.h  FlipQuad.h  FollowPlayers.cpp  (+171 more)
visual_studio_project/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CPPFG2.sln  CPPFG2.vcxproj  CPPFG2.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.ninja
(+421 files in other folders)
